# rustzen-zipper

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE.md  README.md  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/macos/: README.md  index.html  package.json  vite.config.ts
apps/macos/assets/brand/: README.md
apps/macos/src/: App.tsx  styles.css
apps/macos/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos/src-tauri/capabilities/: default.json
apps/macos/src-tauri/icons/: icon.icns
apps/macos/src-tauri/src/: lib.rs  main.rs
docs/progress/: macos-app.md
docs/release/: signing-key-management.md
scripts/: install.js  test.js  verify-package.js
src/: archive_pack.rs  config.rs  error.rs  inspect.rs  lib.rs  main.rs  unpack.rs
tests/: cli.rs
