[package]
name = "rustzen-zipper"
version = "0.2.0"
edition = "2024"
description = "Rust release packaging utility for repeatable zip archives"
authors = ["Bruce Dai <bruce@idaibin.dev>", "Rustzen Contributors"]
license = "MIT"
repository = "https://github.com/rustzen/rustzen-zipper"
homepage = "https://github.com/rustzen/rustzen-zipper#readme"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
zip = "5.1.1"
