[package]
name = "rustzen-zipper-macos"
version = "0.1.0"
description = "Rustzen Zipper macOS desktop app"
edition = "2024"

[lib]
name = "rustzen_zipper_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rustzen-zipper = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
